Fixed parallax overflow

--- a/css/grid.css
+++ b/css/grid.css
@@ -14,66 +14,40 @@ body {
     font-family: 'Roboto', sans-serif;
     text-align:center;
     perspective: 1px;
-    transform-style: preserve-3d;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
-.slide {
-  position: relative;
-  padding: 25vh 10%;
-  min-height: 100vh;
-  width: 100vw;
-  box-sizing: border-box;
-	transform-style: inherit;
-}
-
-.slide:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left:0;
-  right:0;
-}
-
-#slide1:before {
-  background-image: url('../img/parallax.jpg');
-  transform: translateZ(-1px) scale(2);
+.parallax {
+  height: 100vh;
   z-index:-1;
 }
 
 #intro {
     height: 100%;
-    width: 100%; 
-    /*background:#FCFCFC;*/
+    width: 100%;
+    background: url('../img/parallax.png') no-repeat bottom center fixed;
+    background-size: cover;
 }
 
-#floating-intro {
+#floating-title {
     width:100%;
-    height:30%;
     left: 50%;
-    top: 50%;
+    top: 35%;
     margin-left: -50%;
     margin-top: -200px;
     text-align: center;
     position: absolute;
-    font-size:70px;
-    color:#333;
-    transform: translateZ(-1.5px) scale(2);
-    z-index:-1;
-    /*background-color: blue;*/
+    font-size:80px;
+    color:#fff;
+    transform: translateZ(-0.4px);
 }
 
-#floating-intro ul {
+#floating-title ul {
     margin-top:-55px;
-    color:#333;
+    color:#fff;
     font-size:50px;
     text-align:center;
-}
-
-h2 {
-    margin-top: 0;
 }
 
 #description {
@@ -82,20 +56,15 @@ h2 {
     background-color:#fff;
     color:#555;
     text-align:center;
-    overflow: hidden;
 }
 
 h1 {
-  color: #345274;
+  color: #333;
   font-size: 32px;
   font-weight: 300;
-  letter-spacing: 0.08em;
   text-align: center;
-  text-transform: uppercase;
-}
-
-#description p {
-
+  /*letter-spacing: 0.08em;
+  text-transform: uppercase;*/
 }
 
 #albums-intro {
